[package]
name = "bully-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
libc = "0.2"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
bytes = "1.5"
byteorder = "1.5"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
